samples/_failures_safe/1761630784_ce024f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73b51160.c: In function ‘main’:
./samples/SAFE/__tmp_73b51160.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
